--- a/public/app/plugins/datasource/azuremonitor/dashboards/appInsights.json
+++ b/public/app/plugins/datasource/azuremonitor/dashboards/appInsights.json
@@ -1,14 +1,5 @@
 {
-  "__inputs": [
-    {
-      "name": "DS_AZURE_MONITOR",
-      "label": "Azure Monitor",
-      "description": "",
-      "type": "datasource",
-      "pluginId": "grafana-azure-monitor-datasource",
-      "pluginName": "Azure Monitor"
-    }
-  ],
+  "__inputs": [],
   "__elements": {},
   "__requires": [
     {
@@ -117,7 +108,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -213,7 +204,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "A",
@@ -326,7 +317,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -406,7 +397,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Log Analytics",
           "refId": "B",
@@ -543,7 +534,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "description": "The resource path for this panel uses multiple template variables which requires modifying the dashboard JSON directly. If you would like to do something similar please go to Settings > JSON Model. Edit as you'd like in your new copy by going to Settings > Save as.",
       "fieldConfig": {
@@ -672,7 +663,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
@@ -687,7 +678,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "hide": false,
           "queryType": "Azure Log Analytics",
@@ -702,7 +693,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -814,7 +805,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Failed requests",
@@ -828,7 +819,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -946,7 +937,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "A",
@@ -961,7 +952,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -1077,7 +1068,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "A",
@@ -1091,7 +1082,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -1223,7 +1214,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "A",
@@ -1237,7 +1228,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -1378,7 +1369,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Server Exceptions",
@@ -1413,7 +1404,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Dependency failures",
@@ -1428,7 +1419,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -1544,7 +1535,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Processor",
@@ -1578,7 +1569,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Process CPU",
@@ -1592,7 +1583,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -1766,7 +1757,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Page load network connect time",
@@ -1800,7 +1791,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Client processing time",
@@ -1834,7 +1825,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Send request time",
@@ -1868,7 +1859,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "Receiving response time",
@@ -1882,7 +1873,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -1994,7 +1985,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "A",
@@ -2008,7 +1999,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -2120,7 +2111,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "A",
@@ -2134,7 +2125,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -2248,7 +2239,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "A",
@@ -2262,7 +2253,7 @@
     {
       "datasource": {
         "type": "grafana-azure-monitor-datasource",
-        "uid": "${DS_AZURE_MONITOR}"
+        "uid": "${ds}"
       },
       "fieldConfig": {
         "defaults": {
@@ -2376,7 +2367,7 @@
           },
           "datasource": {
             "type": "grafana-azure-monitor-datasource",
-            "uid": "${DS_AZURE_MONITOR}"
+            "uid": "${ds}"
           },
           "queryType": "Azure Monitor",
           "refId": "A",
@@ -2414,7 +2405,7 @@
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
-          "uid": "${DS_AZURE_MONITOR}"
+          "uid": "${ds}"
         },
         "definition": "",
         "hide": 0,
@@ -2441,7 +2432,7 @@
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
-          "uid": "${DS_AZURE_MONITOR}"
+          "uid": "${ds}"
         },
         "definition": "",
         "hide": 0,
@@ -2470,7 +2461,7 @@
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
-          "uid": "${DS_AZURE_MONITOR}"
+          "uid": "${ds}"
         },
         "definition": "",
         "hide": 2,
@@ -2501,7 +2492,7 @@
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
-          "uid": "${DS_AZURE_MONITOR}"
+          "uid": "${ds}"
         },
         "definition": "ResourceNames($sub, $rg, $ns)",
         "hide": 0,
@@ -2521,7 +2512,7 @@
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
-          "uid": "${DS_AZURE_MONITOR}"
+          "uid": "${ds}"
         },
         "definition": "",
         "hide": 2,
@@ -2539,7 +2530,7 @@
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
-          "subscription": "ebb79bc0-aa86-44a7-8111-cabbe0c43993"
+          "subscription": "$sub"
         },
         "refresh": 1,
         "regex": "",
@@ -2551,7 +2542,7 @@
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
-          "uid": "${DS_AZURE_MONITOR}"
+          "uid": "${ds}"
         },
         "definition": "",
         "hide": 2,
@@ -2569,7 +2560,7 @@
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
-          "subscription": "ebb79bc0-aa86-44a7-8111-cabbe0c43993"
+          "subscription": "$sub"
         },
         "refresh": 1,
         "regex": "",
@@ -2581,7 +2572,7 @@
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
-          "uid": "${DS_AZURE_MONITOR}"
+          "uid": "${ds}"
         },
         "definition": "",
         "hide": 2,
@@ -2598,7 +2589,7 @@
           },
           "queryType": "Azure Log Analytics",
           "refId": "A",
-          "subscription": "ebb79bc0-aa86-44a7-8111-cabbe0c43993"
+          "subscription": "$sub"
         },
         "refresh": 1,
         "regex": "",
